# league-connect-rs

./: Cargo.toml  LICENSE  README.md
examples/: connect.rs  lobby.rs  rest.rs
src/: auth.rs  http.rs  lib.rs  websocket.rs
