[package]
name = "league-connect-rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of league-connect — LCU process discovery, REST and WebSocket client"
license = "MIT"
repository = "https://github.com/QAQTam/league-connect-rust"
keywords = ["league-of-legends", "lcu", "riot", "websocket"]
categories = ["api-bindings", "game-engines"]

[dependencies]
# 进程枚举（替代 PowerShell Get-CimInstance）
sysinfo = "0.32"

# 正则（解析进程 cmdline）
regex = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（跳过 LCU 自签证书）
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# LCU WebSocket（WAMP 协议）
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls        = "0.2"
futures-util      = "0.3"

# JSON
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64（Basic Auth 头）
base64 = "0.22"

[[example]]
name = "connect"
path = "examples/connect.rs"
