[package]
name = "league-connect-rust"
version = "0.1.0"
edition = "2021"
description = "Rust client for the League of Legends LCU API — process discovery, REST and WebSocket (WAMP)"
license = "MIT"
keywords = ["league-of-legends", "lcu", "riot", "websocket"]
categories = ["api-bindings"]

[dependencies]
sysinfo           = "0.32"
regex             = "1"
tokio             = { version = "1", features = ["full"] }
reqwest           = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls        = "0.2"
futures-util      = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
base64            = "0.22"

[[example]]
name = "connect"
path = "examples/connect.rs"

[[example]]
name = "rest"
path = "examples/rest.rs"
